--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -13,3 +13,12 @@ body {
     line-height: 28px;
     color: #000;
 }
+
+#container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.con_pd {
+    padding: 0 80px;
+}
