--- a/assets/css/display.css
+++ b/assets/css/display.css
@@ -117,4 +117,8 @@ html, body { width: 100%; height: 100%; }
 
 body { font-family: 'Inter', sans-serif; font-size: 16px; font-weight: 400; line-height: 28px; color: #000; }
 
+#container { max-width: 1440px; margin: 0 auto; }
+
+.con_pd { padding: 0 80px; }
+
 /*# sourceMappingURL=../css/display.css.map */
