--- a/dev/css_dev/utils/_variables.scss
+++ b/dev/css_dev/utils/_variables.scss
@@ -34,9 +34,12 @@ $light_gray: #999;
 $light_black: #999;
 $white_gray: #f1f1f1;
 $camel: #c69c6d;
-$point_clr:#e46764;
 $border_clr:#f1f1f1;
 $border_clr2:#ccc;
+
+//color2
+$prime_color: #503AE7;
+$sub_color: #1AD993;
 
 //btn
 $df_h_s:35px;
