--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -2,140 +2,228 @@
 
 html,
 body {
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    font-size: 16px;
-    font-weight: $r;
-    color: #000;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+  font-weight: $r;
+  color: #000;
 }
 
 #container {
-    max-width: 1440px;
-    margin: 0 auto;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 // promotion only css - 임시
 
 // promotion
 .promotion {
-    .promo_tit {
-        overflow: hidden;
-        height: 117px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 1px solid rgba(0,0,0,.2);
-        h1 {
-            float: left;
-            font-weight: $b;
-        }
-    }
-    .promo_con {
-        h3 {
-            margin-top: 96px;
-            font-size: 24px;
-            font-weight: $sb;
-        }
-        .typo_box {
-            overflow: hidden;
-            width: 100%;
-            background-color: #F4F2FF;
-            margin-top: 48px;
-            text-align: center;
-            padding: 80px;
-            .download {
-                float: left;
-                font-size: 32px;
-                font-weight: $b;
-                a {
-                    span.ico {
-                        background: url(../../../assets/images/ico/ico_down.png) no-repeat center;
-                        width: 51px;
-                        height: 51px;
-                        border-radius: 50%;
-                        display: inline-block;
-                        background-color: #503AE7;
-                        vertical-align: bottom;
-                    }
-                    p {
-                        display: inline-block;
-                        margin-left: 24px;
-                        line-height: 51px;
-                    }
-                }
-            }
-            .font {
-                font-weight: $sb;
-                font-size: 24px;
-                .ico {
-                    display: inline-block;
-                    background: url(../../../assets/images/ico/ico_folder.png) no-repeat center / 100%;
-                    width: 68px;
-                    height: 54px;
-                }
-                p {
-                    display: inline-block;
-                    vertical-align: bottom;
-                    line-height: 58px;
-                    margin-left: 22px;
-                }
-            }
-        }
-    }
+  .promo_tit {
+      overflow: hidden;
+      height: 117px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid rgba(0,0,0,.2);
+      h1 {
+          float: left;
+          font-weight: $b;
+      }
+  }
+  .promo_con {
+      h3 {
+          margin-top: 96px;
+          font-size: 24px;
+          font-weight: $sb;
+      }
+      .typo_box {
+          overflow: hidden;
+          width: 100%;
+          background-color: #F4F2FF;
+          margin-top: 48px;
+          text-align: center;
+          padding: 80px;
+          .download {
+              float: left;
+              font-size: 32px;
+              font-weight: $b;
+              a {
+                  span.ico {
+                      background: url(../../../assets/images/ico/ico_down.png) no-repeat center;
+                      width: 51px;
+                      height: 51px;
+                      border-radius: 50%;
+                      display: inline-block;
+                      background-color: #503AE7;
+                      vertical-align: bottom;
+                  }
+                  p {
+                      display: inline-block;
+                      margin-left: 24px;
+                      line-height: 51px;
+                  }
+              }
+          }
+          .font {
+              font-weight: $sb;
+              font-size: 24px;
+              .ico {
+                  display: inline-block;
+                  background: url(../../../assets/images/ico/ico_folder.png) no-repeat center / 100%;
+                  width: 68px;
+                  height: 54px;
+              }
+              p {
+                  display: inline-block;
+                  vertical-align: bottom;
+                  line-height: 58px;
+                  margin-left: 22px;
+              }
+          }
+      }
+  }
 }
 
 //text_heading
 
 .text_heading {
-    margin-top: 96px;
-    .tehead_wrap {
-        overflow: hidden;
-        .heading {
-            float: left;
-            width: 30%;
-            p {
-                margin-bottom: 38px;
-            }
-            .heading_1 {    
-                font-size: 48px;
-                font-weight: $b;
-            }
-            .heading_2 {
-                font-size: 32px;
-                font-weight: $b;
-            }
-            .heading_3 {
-                font-size: 24px;
-                font-weight: $sb;
-            }
-            .heading_4 {
-                font-size: 20px;
-                font-weight: $sb;
-            }
-            .heading_5 {
-                font-size: 16px;
-                font-weight: $r;
-            }
-            .heading_6 {
-                font-size: 12px;
-                font-weight: $r;
-                margin-bottom: 0;
-            }
-        }   
-        .body_text {
-            width: 70%;
-            line-height: 150%;
-        }
-    }
+  margin-top: 96px;
+  .tehead_wrap {
+      overflow: hidden;
+      .heading {
+          float: left;
+          width: 30%;
+          p {
+              margin-bottom: 38px;
+          }
+          .heading_1 {    
+              font-size: 48px;
+              font-weight: $b;
+          }
+          .heading_2 {
+              font-size: 32px;
+              font-weight: $b;
+          }
+          .heading_3 {
+              font-size: 24px;
+              font-weight: $sb;
+          }
+          .heading_4 {
+              font-size: 20px;
+              font-weight: $sb;
+          }
+          .heading_5 {
+              font-size: 16px;
+              font-weight: $r;
+          }
+          .heading_6 {
+              font-size: 12px;
+              font-weight: $r;
+              margin-bottom: 0;
+          }
+      }   
+      .body_text {
+          width: 70%;
+          line-height: 150%;
+      }
+  }
 }
 
+// color_palette
+.color_palette {
+  h3 {
+      font-size: 30px;
+      font-weight: $sb;
+  }
+  ul {
+      overflow: hidden;
+      text-align: center;
+      margin-top: 48px;
+      li {
+          float: left;
+          width: 128px;
+          height: 96px;
+          line-height: 96px;
+      }
+      .sub_color {
+          background-color: $sub_color;
+      }
+      .color_1 {
+          background-color: $color_1
+      }
+      .prime_color {
+          background-color: $prime_color;
+      }
+      .color_2 {
+          background-color: $color_2;
+      }
+      .color_3 {
+          background-color: black;
+          color: #fff;
+      }
+      .color_4 {
+          background-color: $color_4;
+      }
+      .color_5 {
+          background-color: $color_5;
+      }
+  }
+}
+
+// compoents
+
+.components {
+  .btn_com_list {
+    margin-top: 48px;
+    overflow: hidden;
+    li {
+      float: left;
+    }
+  }
+}
+
+.btn_1 {
+  background-color: $prime_color;
+  color: #fff;
+  line-height: 48px;
+  width: 115px;
+  height: 48px;
+  text-align: center;
+  a {
+    display: block;
+    height: 100%;
+  }
+}
+.btn_2 {
+  line-height: 46px;
+  height: 48px;
+  text-align: center;
+  width: 147px;
+  border: 2px solid #14142B;
+  a {
+    display: block;
+    height: 100%;
+  }
+}
+.btn_3 {
+  a {
+    display: block;
+    height: 100%;
+  }
+}
+.btn_4 {
+  a {
+    display: block;
+    height: 100%;
+  }
+}
 
 // content padding
 .con_pd {
-    padding: 0 80px;
+  padding: 0 80px;
 }
