--- a/dev/css_dev/utils/_variables.scss
+++ b/dev/css_dev/utils/_variables.scss
@@ -40,6 +40,11 @@ $border_clr2:#ccc;
 //color2
 $prime_color: #503AE7;
 $sub_color: #1AD993;
+$color_1: #ABFFE0;
+$color_2: #832BC1;
+$color_4: #AFB0B9;
+$color_5: #F4F2FF;
+
 
 //btn
 $df_h_s:35px;
