--- a/dev/css_dev/base/_base.scss
+++ b/dev/css_dev/base/_base.scss
@@ -1,5 +1,11 @@
 @charset "utf-8";
-
+/* ========================================================== */
+/*                                                            */
+/* file		: base                                            */
+/*                                                            */
+/* ========================================================== */
+/* ---------------------------------------------------------- */
+/* base s =================================================== */
 html,
 body {
   width: 100%;
@@ -101,7 +107,7 @@ body {
           p {
               margin-bottom: 38px;
           }
-          .heading_1 {    
+          .heading_1 {
               font-size: 48px;
               font-weight: $b;
           }
@@ -126,7 +132,7 @@ body {
               font-weight: $r;
               margin-bottom: 0;
           }
-      }   
+      }
       .body_text {
           width: 70%;
           line-height: 150%;
@@ -227,3 +233,5 @@ body {
 .con_pd {
   padding: 0 80px;
 }
+/* base e =================================================== */
+/* ---------------------------------------------------------- */
