--- a/dev/css_dev/base/_font.scss
+++ b/dev/css_dev/base/_font.scss
@@ -1,5 +1,11 @@
 @charset "utf-8";
-
+/* ========================================================== */
+/*                                                            */
+/* file     : fonts                                           */
+/*                                                            */
+/* ========================================================== */
+/* ---------------------------------------------------------- */
+/* Inter s =========================================== */
 @font-face {
     font-family: 'Inter';
     src: url('../fonts/Inter-Regular.woff2') format('woff2'),
@@ -24,3 +30,5 @@
     font-weight: $b;
     font-style: normal;
   }
+/* Inter e ======================================= */
+/* ---------------------------------------------------------- */
