--- a/dev/css_dev/display/_list.scss
+++ b/dev/css_dev/display/_list.scss
@@ -1,1 +1,11 @@
 @charset "utf-8";
+/* ========================================================== */
+/*                                                            */
+/* file		: list                                      	  */
+/*                                                            */
+/* ========================================================== */
+/* ---------------------------------------------------------- */
+/* list s =================================================== */
+
+/* list e =================================================== */
+/* ---------------------------------------------------------- */
