--- a/dev/css_dev/display/_table.scss
+++ b/dev/css_dev/display/_table.scss
@@ -1,1 +1,11 @@
 @charset "utf-8";
+/* ========================================================== */
+/*                                                            */
+/* file		: table                                      	  */
+/*                                                            */
+/* ========================================================== */
+/* ---------------------------------------------------------- */
+/* table s ================================================== */
+
+/* table e ================================================== */
+/* ---------------------------------------------------------- */
