--- a/dev/css_dev/display/_thumbnail.scss
+++ b/dev/css_dev/display/_thumbnail.scss
@@ -1,1 +1,11 @@
 @charset "utf-8";
+/* ========================================================== */
+/*                                                            */
+/* file		: _thumbnail                                      	  */
+/*                                                            */
+/* ========================================================== */
+/* ---------------------------------------------------------- */
+/* _thumbnail s ============================================== */
+
+/* _thumbnail e ============================================== */
+/* ---------------------------------------------------------- */
