--- a/dev/css_dev/pages/_main.scss
+++ b/dev/css_dev/pages/_main.scss
@@ -1,1 +1,11 @@
 @charset "utf-8";
+/* ========================================================== */
+/*                                                            */
+/* file		: main                                      	  */
+/*                                                            */
+/* ========================================================== */
+/* ---------------------------------------------------------- */
+/* main s =================================================== */
+
+/* main e =================================================== */
+/* ---------------------------------------------------------- */
