--- a/dev/css_dev/display.scss
+++ b/dev/css_dev/display.scss
@@ -25,8 +25,7 @@
 	'display/table.scss',
 	'display/list.scss',
 	'display/tab.scss',
-	'display/thumbnail.scss',
-	'display/popup.scss';
+	'display/thumbnail.scss';
 
 @import
 	'pages/main.scss'
