--- a/dev/css_dev/utils/_variables.scss
+++ b/dev/css_dev/utils/_variables.scss
@@ -6,16 +6,7 @@
 // ======================================================================== //
 
 // font==================================================================== //
-//$default_font: 'Apple SD Gothic Neo';
-//$default_font: 'Noto Sans KR', sans-serif;
-//$default_font: 'Noto Serif KR', serif;
-//$default_font: 'Noto Serif', sans-serif;
-//$default_font: 'Nanum Gothic', sans-serif;
-//$default_font: 'Nanum Myeongjo', serif;
-//$default_font: 'Roboto', sans-serif;
-//$default_font: 'Apple SD Gothic Neo', sans-serif;
-//$default_font: 'Malgun Gothic', sans-serif;
-$second_font: 'Open Sans';
+
 $th: 100;
 $l: 300;
 $r: 400;
@@ -37,14 +28,13 @@ $camel: #c69c6d;
 $border_clr:#f1f1f1;
 $border_clr2:#ccc;
 
-//color2
+//finswee8 color2
 $prime_color: #503AE7;
 $sub_color: #1AD993;
 $color_1: #ABFFE0;
 $color_2: #832BC1;
 $color_4: #AFB0B9;
 $color_5: #F4F2FF;
-
 
 //btn
 $df_h_s:35px;
@@ -67,58 +57,9 @@ $narrow: 1280px;
 
 //url
 $img_url:'../../images/';
-$img_common_url:'common_sub/';
-$img_order_url:'order/';
-$img_pg_url:'pg/';
-$img_cs_url:'cs/';
-$img_mbr_url:'member/';
-$img_mp_url:'mypage/';
 
 //motion
 $slide_time:300;
-
-//card
-$card-color: (
-	'bc':#e83d44,
-	'hana':#008598,
-	'hyundai':#566582,
-	'kb':#776c61,
-	'lotte':#5c49d9,
-	'nh':#37b978,
-	'samsung':#188cd6,
-	'shinhan':#91acc4
-);
-$card-fontcolor: (
-	'bc':#fff,
-	'hana':#fff,
-	'hyundai':#fff,
-	'kb':#fff,
-	'lotte':#fff,
-	'nh':#fff,
-	'samsung':#fff,
-	'shinhan':#fff
-);
-
-//notification
-$n-kind-name: (
-	'athome',
-	'coupon',
-	'delivery',
-	'event',
-	'expire',
-	'fitting',
-	'gift',
-	'member',
-	'new',
-	'order',
-	'pickup',
-	'plus',
-	'qna',
-	'repair',
-	'repair_2',
-	'return',
-	'sale'
-);
 
 $font-6r:0.6rem;
 $font-7r:0.7rem;
