--- a/dev/css_dev/utils/_mixin.scss
+++ b/dev/css_dev/utils/_mixin.scss
@@ -230,15 +230,23 @@
   #{$property}:calc(constant(safe-area-inset-right) + #{$value});
   #{$property}:calc(env(safe-area-inset-right) + #{$value});
 }
-@mixin mdq-mo {
-  @media only screen and (max-width:#{$mini-mo-w}){
+
+
+// mdq
+@mixin mdq_pc {
+  @media only screen and (max-width: 768px){
     @content;
   }
 }
-@mixin mdq-pc {
-  @media only screen and (min-width:#{$mini-pc-w}){
+
+@mixin mdq_tab {
+  @media only screen and (max-width: 425px){
     @content;
-    .fixed-action-sheet.seet-fixed{border-left: 1px solid #e8e8e8;border-right: 1px solid #e8e8e8;}
-    .fixed-action-sheet.expand-right{right:50% !important;margin-right:-320px;transform: translateX(0) !important;}
+  }
+}
+
+@mixin mdq_mo {
+  @media only screen and (max-width: 360px){
+    @content;
   }
 }
