--- a/dev/css_dev/base/_font.scss
+++ b/dev/css_dev/base/_font.scss
@@ -8,24 +8,27 @@
 /* Inter s =========================================== */
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-Regular.woff2') format('woff2'),
+    src:
     url('../fonts/Inter-Regular.woff') format('woff'),
+    url('../fonts/Inter-Regular.eot?#iefix') format('eot'),
     url('../fonts/Inter-Regular.ttf') format('truetype');
     font-weight: $r;
     font-style: normal;
   }
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-SemiBold.woff2') format('woff2'),
+    src: 
     url('../fonts/Inter-SemiBold.woff') format('woff'),
+    url('../fonts/Inter-SemiBold.eot?#iefix') format('eot'),
     url('../fonts/Inter-SemiBold.ttf') format('truetype');
     font-weight: $sb;
     font-style: normal;
   }
 @font-face {
     font-family: 'Inter';
-    src: url('../fonts/Inter-Bold.woff2') format('woff2'),
+    src: 
     url('../fonts/Inter-Bold.woff') format('woff'),
+    url('../fonts/Inter-Bold.eot?#iefix') format('eot'),
     url('../fonts/Inter-Bold.ttf') format('truetype');
     font-weight: $b;
     font-style: normal;
